--- a/src/main_window.glade
+++ b/src/main_window.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.38.1 -->
+<!-- Generated with glade 3.38.2 -->
 <interface>
   <requires lib="gtk+" version="3.24"/>
   <object class="GtkWindow" id="main_window">
@@ -7,21 +7,28 @@
     <property name="title" translatable="yes">Btrfs‍ GUI</property>
     <property name="default-width">800</property>
     <property name="default-height">600</property>
-    <property name="icon-name">applications-engineering</property>
+    <property name="icon">btrfs_logo.png</property>
     <child>
-      <object class="GtkScrolledWindow">
+      <object class="GtkNotebook" id="drives">
         <property name="visible">True</property>
         <property name="can-focus">True</property>
-        <property name="shadow-type">in</property>
         <child>
-          <object class="GtkTextView" id="test_text">
-            <property name="visible">True</property>
-            <property name="can-focus">True</property>
-            <property name="editable">False</property>
-            <style>
-              <class name="console"/>
-            </style>
-          </object>
+          <placeholder/>
+        </child>
+        <child type="tab">
+          <placeholder/>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+        <child type="tab">
+          <placeholder/>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+        <child type="tab">
+          <placeholder/>
         </child>
       </object>
     </child>
